
****  Fix 2009 localparam syntax, msg2139. [Galen Seitz]

****  Fix ugly interface-to-non-interface errors, bug1112. [Johan Bjork]

****  Fix LDFLAGS and CFLAGS not preserving order, bug1130. [Olof Kindgren]

****  Fix internal error on initializing parameter array, bug1131. [Jie Xu]

****  Fix internal error on interface arrays, bug1135. [John Stevenson]

****  Fix realpath compile issue on MSVC++, bug1141. [Miodrag Milanovic]


* Verilator 3.900 2017-01-15

**    Internal code changes for improved compatibility and performance.

***   Support old-style $display($time), bug467. [John Demme]

****  With --bbox-unsup, suppress desassign and mixed edges, bug1120. [Galen Seitz]

****  Fix parsing sensitivity with &&, bug934. [Luke Yang]

****  Fix internal error on double-for loop unrolling, bug1044. [Jan Egil Ruud]

****  Fix internal error on unique casez with --assert, bug1117. [Enzo Chi]

****  Fix bad code when tracing array of structs, bug1122. [Andrew Bardsley]


* Verilator 3.890 2016-11-25

***   Honor --output-split on coverage constructors, bug1098. [Johan Bjork]

****  Fix various issues when making outside of the kit.

****  Fix flex 2.6.2 bug, bug1103. [Sergey Kvachonok]

****  Fix error on bad interface name, bug1097. [Todd Strader]

****  Fix error on referencing variable in parent, bug1099. [Ian Thompson]

****  Fix type parameters with low optimization, bug1101. [Stefan Wallentowitz]


* Verilator 3.888 2016-10-14

**    Support foreach, bug1078. [Xuan Guo]

***   Add --no-decoration to remove output comments, msg2015. [Frederic Requin]

***   If VM_PARALLEL_BUILDS=1, use OPT_FAST and OPT_SLOW. [Frederic Requin]
      Set VM_DEFAULT_RULES=0 for old behavior.

****  Add error on DPI functions > 32 bits, msg1995. [Elliot Mednick]

****  Fix SystemC compiles with VPI, bug1081. [Arthur Kahlich]

****  Fix error on wide numbers that represent shifts, msg1991, bug1088. [Mandy Xu]
