@@ -45,4 +45,12 @@ module t;
       $stop;
    endfunction
 
+   // Verify $fatal works with sformatf as argument
+   localparam BFATAL = f_bad_fatal(3);
+   function integer f_bad_fatal(input [31:0] a);
+      for (integer i=0;i<3;i++) begin
+         $display("Printing in loop: %s", $sformatf("%d", i));
+      end
+      $fatal(2, "%s", $sformatf("Fatal Error"));
+   endfunction
 endmodule
