@@ -19,6 +19,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Fix internal error on interface arrays, bug1135. [John Stevenson]
 
+****  Fix calling sformatf to display, and elab $displays, bug1139. [Johan Bjork]
+
 ****  Fix realpath compile issue on MSVC++, bug1141. [Miodrag Milanovic]
 
 
